Build an artifact in GH actions

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,10 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
 
+    - name: Build project # This would actually build your project, using zip for an example artifact
+      run: |
+        ./compress.sh
+
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
