--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -27,9 +27,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        draft: true
         prerelease: false
 
     - name: Upload Release Asset
