--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         tag_name: ${{ github.sha }}
         release_name: Release ${{ github.sha }}
-        draft: true
+        draft: false
         prerelease: false
 
     - name: Upload Release Asset
