--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -27,8 +27,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: 1.0
+        release_name: 1.0
         draft: false
         prerelease: false
 
