--- a/public/acf-json/options-general-settings.json
+++ b/public/acf-json/options-general-settings.json
@@ -62,6 +62,124 @@
           "maxlength": ""
         }
       ]
+    },
+    {
+      "key": "field_5e5f5976e8057",
+      "label": "Pros Settings",
+      "name": "pros_settings",
+      "type": "group",
+      "instructions": "",
+      "required": 0,
+      "conditional_logic": 0,
+      "wrapper": {
+        "width": "",
+        "class": "",
+        "id": ""
+      },
+      "layout": "row",
+      "sub_fields": [
+        {
+          "key": "field_5e5f5a089799d",
+          "label": "Pros Features Color",
+          "name": "pros_features_color",
+          "type": "color_picker",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "default_value": ""
+        },
+        {
+          "key": "field_5e5f57ddcaa0f",
+          "label": "Pros Icon",
+          "name": "pros_icon",
+          "type": "font-awesome",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "icon_sets": [
+            "fas",
+            "far"
+          ],
+          "custom_icon_set": "",
+          "default_label": "",
+          "default_value": "",
+          "save_format": "class",
+          "allow_null": 0,
+          "show_preview": 1,
+          "enqueue_fa": 0,
+          "fa_live_preview": "",
+          "choices": []
+        }
+      ]
+    },
+    {
+      "key": "field_5e5f5aee45369",
+      "label": "Cons Settings",
+      "name": "cons_settings",
+      "type": "group",
+      "instructions": "",
+      "required": 0,
+      "conditional_logic": 0,
+      "wrapper": {
+        "width": "",
+        "class": "",
+        "id": ""
+      },
+      "layout": "row",
+      "sub_fields": [
+        {
+          "key": "field_5e113cf64e5b6",
+          "label": "Cons Features Color",
+          "name": "cons_features_color",
+          "type": "color_picker",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "default_value": ""
+        },
+        {
+          "key": "field_5e5f58f9b8e1c",
+          "label": "Cons Icon",
+          "name": "cons_icon",
+          "type": "font-awesome",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "icon_sets": [
+            "fas",
+            "far"
+          ],
+          "custom_icon_set": "",
+          "default_label": "",
+          "default_value": "",
+          "save_format": "class",
+          "allow_null": 0,
+          "show_preview": 1,
+          "enqueue_fa": 0,
+          "fa_live_preview": "",
+          "choices": []
+        }
+      ]
     }
   ],
   "location": [
@@ -79,6 +197,7 @@
   "label_placement": "top",
   "instruction_placement": "label",
   "hide_on_screen": "",
-  "active": true,
-  "description": ""
+  "active": 1,
+  "description": "",
+  "modified": 1583307297
 }
