--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Extract version
       id: version
       run: |
-        VERSION=`cat acf-product-reviews.php| sed -nE 's/.* Version.*([0-9]+\.[0-9]+\.[0-9]+)/\1/p'`
+        VERSION=`cat affiliate-box.php| sed -nE 's/.* Version.*([0-9]+\.[0-9]+\.[0-9]+)/\1/p'`
         echo "::set-output name=version::$VERSION"
 
 #    - name: Create Release
