--- a/public/acf-json/options-general-settings.json
+++ b/public/acf-json/options-general-settings.json
@@ -180,6 +180,111 @@
           "choices": []
         }
       ]
+    },
+    {
+      "key": "field_5ed32e86a080e",
+      "label": "Button Settings",
+      "name": "button_settings",
+      "type": "group",
+      "instructions": "",
+      "required": 0,
+      "conditional_logic": 0,
+      "wrapper": {
+        "width": "",
+        "class": "",
+        "id": ""
+      },
+      "layout": "row",
+      "sub_fields": [
+        {
+          "key": "field_5ed32ec1a080f",
+          "label": "Background Color",
+          "name": "background_color",
+          "type": "color_picker",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "default_value": ""
+        },
+        {
+          "key": "field_5ed32effa0810",
+          "label": "Text Color",
+          "name": "text_color",
+          "type": "color_picker",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "default_value": ""
+        }
+      ]
+    },
+    {
+      "key": "field_5effa5e00118b",
+      "label": "Product Review Templates",
+      "name": "product_review_templates",
+      "type": "repeater",
+      "instructions": "",
+      "required": 0,
+      "conditional_logic": 0,
+      "wrapper": {
+        "width": "",
+        "class": "",
+        "id": ""
+      },
+      "collapsed": "",
+      "min": 0,
+      "max": 0,
+      "layout": "table",
+      "button_label": "",
+      "sub_fields": [
+        {
+          "key": "field_5effa64b4d6e4",
+          "label": "Name",
+          "name": "name",
+          "type": "text",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "20",
+            "class": "",
+            "id": ""
+          },
+          "default_value": "",
+          "placeholder": "",
+          "prepend": "",
+          "append": "",
+          "maxlength": ""
+        },
+        {
+          "key": "field_5effa5fc0118c",
+          "label": "Template",
+          "name": "template",
+          "type": "acf_code_field",
+          "instructions": "",
+          "required": 0,
+          "conditional_logic": 0,
+          "wrapper": {
+            "width": "",
+            "class": "",
+            "id": ""
+          },
+          "default_value": "",
+          "placeholder": "",
+          "mode": "htmlmixed",
+          "theme": "monokai"
+        }
+      ]
     }
   ],
   "location": [
@@ -199,5 +304,5 @@
   "hide_on_screen": "",
   "active": 1,
   "description": "",
-  "modified": 1583307297
+  "modified": 1593812592
 }
