--- a/public/acf-json/options-general-settings.json
+++ b/public/acf-json/options-general-settings.json
@@ -116,7 +116,7 @@
           "save_format": "class",
           "allow_null": 0,
           "show_preview": 1,
-          "enqueue_fa": 0,
+          "enqueue_fa": 1,
           "fa_live_preview": "",
           "choices": []
         }
@@ -175,7 +175,7 @@
           "save_format": "class",
           "allow_null": 0,
           "show_preview": 1,
-          "enqueue_fa": 0,
+          "enqueue_fa": 1,
           "fa_live_preview": "",
           "choices": []
         }
@@ -256,7 +256,7 @@
           "required": 0,
           "conditional_logic": 0,
           "wrapper": {
-            "width": "20",
+            "width": "",
             "class": "",
             "id": ""
           },
@@ -304,5 +304,5 @@
   "hide_on_screen": "",
   "active": 1,
   "description": "",
-  "modified": 1593812592
+  "modified": 1593826420
 }
