--- a/public/acf-json/options-general-settings.json
+++ b/public/acf-json/options-general-settings.json
@@ -288,6 +288,25 @@
       ]
     },
     {
+      "key": "field_5f0a6415ca86a",
+      "label": "Bootstrap 4",
+      "name": "bootstrap_4",
+      "type": "true_false",
+      "instructions": "Include Bootstrap 4 CSS style on the page",
+      "required": 0,
+      "conditional_logic": 0,
+      "wrapper": {
+        "width": "",
+        "class": "",
+        "id": ""
+      },
+      "message": "",
+      "default_value": 1,
+      "ui": 1,
+      "ui_on_text": "",
+      "ui_off_text": ""
+    },
+    {
       "key": "field_5effa5e00118b",
       "label": "Product Review Templates",
       "name": "product_review_templates",
@@ -363,5 +382,5 @@
   "hide_on_screen": "",
   "active": 1,
   "description": "",
-  "modified": 1593829710
+  "modified": 1594516690
 }
